--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,94 @@
----
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
----
-
+Peer Assessment 1
+========================================================
 
 ## Loading and preprocessing the data
 
+Load the data
+```{r}
+df <- read.csv("activity.csv")
+```
 
+Process/transform the data into a format suitable for your analysis
+```{r}
+Sys.setlocale("LC_TIME", "English")
+df$date <- as.Date(df$date)
+```
 
 ## What is mean total number of steps taken per day?
+Calculate the total number of steps taken per day
+```{r}
+step_day <- tapply(df$steps, df$date, sum)
+```
 
+Make a histogram of the total number of steps taken each day
+```{r}
+hist(step_day, breaks=50)
+```
 
+Calculate and report the mean and median of the total number of steps taken per day
+```{r}
+mean(step_day, na.rm = T)
+median(step_day, na.rm = T)
+```
 
-## What is the average daily activity pattern?
+# What is the average daily activity pattern?
+Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+```{r}
+mean_interval <- tapply(df$steps, df$interval, mean, na.rm = T)
+plot(names(mean_interval), mean_interval, type="l", xlab="5-minute interval", ylab="Average number of steps taken, averaged across all days")
+```
 
-
+Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+```{r}
+names(which.max(mean_interval))
+```
 
 ## Imputing missing values
+Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+```{r}
+sum(is.na(df$steps))
+```
 
+Devise a strategy for filling in all of the missing values in the dataset. 
+The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc. 
+Create a new dataset that is equal to the original dataset but with the missing data filled in.
+```{r}
+for (i in 1:length(df$steps)) {
+    if(is.na(df$steps[i])) {
+        interval <- as.character(df$interval[i])
+        df$steps[i] <- mean_interval[interval]
+    }
+}
+```
 
+Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. 
+Do these values differ from the estimates from the first part of the assignment? 
+What is the impact of imputing missing data on the estimates of the total daily number of steps?
+```{r}
+step_day_mod <- tapply(df$steps, df$date, sum)
+hist(step_day_mod, breaks=50)
 
-## Are there differences in activity patterns between weekdays and weekends?
+mean(step_day_mod)
+median(step_day_mod)
+```
+
+# Are there differences in activity patterns between weekdays and weekends?
+
+Create a new factor variable in the dataset with two levels - "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
+```{r}
+df$wend <- as.factor(ifelse(weekdays(df$date) %in% c("Saturday", "Sunday"), "weekend", "weekday"))
+tapply(df$steps, df$wend, mean)
+```
+
+Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and 
+the average number of steps taken, averaged across all weekday days or weekend days (y-axis). 
+
+```{r}
+mean_interval_mod <- tapply(df$steps, df$interval, mean)
+
+library(plyr)
+data <- ddply(df, .(interval, wend), summarise, mean=mean(steps))
+
+library(lattice)
+xyplot(mean ~ interval | wend, data=data, type="l", ylab = "Number of steps")
+```
