--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -90,5 +90,5 @@ library(plyr)
 data <- ddply(df, .(interval, wend), summarise, mean=mean(steps))
 
 library(lattice)
-xyplot(mean ~ interval | wend, data=data, type="l", ylab = "Number of steps")
+xyplot(mean ~ interval | wend, data=data, type="l", ylab = "Number of steps", layout=c(1,2))
 ```
